# Zhouyi-Algebra

./: CMakeLists.txt  README.md  main.c  suangua.c  suangua.h  zhouyi_algebra.c  zhouyi_algebra.h
